<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title_index_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@color/DarkGreen"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/empty_value"
            android:textColor="@color/White"
            android:textSize="@dimen/result_titles_size"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_value" />
	</LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_panel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title_index_layout" >
    </ScrollView>

    <LinearLayout 
        android:id="@+id/button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
        android:orientation="horizontal">
        
	    <Button
	        android:id="@+id/agregarAccion_button"
	        android:layout_width="0dp"
	    	android:layout_weight="50"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginLeft="10dp"
	        android:paddingTop="10dp"
 			android:paddingBottom="10dp"
    		android:background="@drawable/shape"
	        android:text="@string/agregar_accion_button"
    		android:textStyle="bold" />
	
	    <Button
	        android:id="@+id/agregarBono_button"
	        android:layout_width="0dp"
	    	android:layout_weight="50"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginLeft="5dp"
	        android:paddingTop="10dp"
 			android:paddingBottom="10dp"
    		android:background="@drawable/shape"
	        android:text="@string/agregar_bono_button"
    		android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
